--- a/DemoWebApiUnityLog4Net/packages.config
+++ b/DemoWebApiUnityLog4Net/packages.config
@@ -10,4 +10,8 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
+  <package id="Unity.AspNet.WebApi" version="5.0.13" targetFramework="net461" />
+  <package id="Unity.Container" version="5.8.6" targetFramework="net461" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
