--- a/DemoWebApiUnityLog4Net/packages.config
+++ b/DemoWebApiUnityLog4Net/packages.config
@@ -13,5 +13,6 @@
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
   <package id="Unity.AspNet.WebApi" version="5.0.13" targetFramework="net461" />
   <package id="Unity.Container" version="5.8.6" targetFramework="net461" />
+  <package id="Unity.Mvc" version="5.0.13" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
