--- a/DemoWebApiUnityLog4Net/packages.config
+++ b/DemoWebApiUnityLog4Net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net461" />
@@ -13,6 +14,7 @@
   <package id="Unity.Abstractions" version="3.3.1" targetFramework="net461" />
   <package id="Unity.AspNet.WebApi" version="5.0.13" targetFramework="net461" />
   <package id="Unity.Container" version="5.8.6" targetFramework="net461" />
+  <package id="Unity.log4net" version="1.0.1" targetFramework="net461" />
   <package id="Unity.Mvc" version="5.0.13" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
